refactor: enhance request/response header handling with auto-suggest fields and color utilities